Adding PUT command to update client
